--- a/content/genes/Znf160.md
+++ b/content/genes/Znf160.md
@@ -1,14 +1,14 @@
 ---
-gene_id: Grhl2
+gene_id: Znf160
 images:
-- caption: Grhl2 expression from Figure S1
-  image_url: images/Grhl2/Grhl2_FigS1_panel_03.png
+- caption: Znf160 expression from Figure S1
+  image_url: images/Znf160/Znf160_FigS1_panel_07.png
   location: null
   source: Simoes-Costa et al. 2016
   source_label: Simoes-Costa et al. 2016
-  stage: HH8
+  stage: HH9
   thumbnail_url: null
-name: Grhl2 gene
+name: Znf160 gene
 ncbi_id: null
 papers:
 - authors: Marcos Simoes-Costa, Marianne E Bronner
@@ -22,11 +22,11 @@ sources:
   type: publication
   url: https://pmc.ncbi.nlm.nih.gov/articles/PMC5100669/
 species: Gallus gallus
-symbol: Grhl2
-title: Grhl2
+symbol: Znf160
+title: Znf160
 ---
 
-# Grhl2
+# Znf160
 
-**Grhl2 gene**
+**Znf160 gene**
 
