--- a/content/genes/RNF220.md
+++ b/content/genes/RNF220.md
@@ -41,7 +41,29 @@ sources:
 species: Gallus gallus
 symbol: RNF220
 title: RNF220
+orthologs:
+- species: Human
+  entrez_id: '55531'
+  ensembl_id: ENSG00000110675
+  mod_id: MIM:615456
+  phenotypes: ''
+- species: Mouse
+  entrez_id: '270162'
+  ensembl_id: ENSMUSG00000041986
+  mod_id: MGI:3583900
+  phenotypes: ''
+- species: Xenopus
+  entrez_id: '779768'
+  ensembl_id: ENSXETG00000038960
+  mod_id: ''
+  phenotypes: ''
+- species: Zebrafish
+  entrez_id: '791199'
+  ensembl_id: ENSDARG00000113222
+  mod_id: ZFIN:ZDB-GENE-070112-262
+  phenotypes: ''
 ---
+
 
 # RNF220
 
