--- a/content/genes/Znf160.md
+++ b/content/genes/Znf160.md
@@ -22,9 +22,10 @@ sources:
   type: publication
   url: https://pmc.ncbi.nlm.nih.gov/articles/PMC5100669/
 species: Gallus gallus
-symbol: Znf160
-title: Znf160
+symbol: ZNF160
+title: ZNF160
 ---
+
 
 # Znf160
 
